--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/lcassa/pdf-edit#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "googleapis": "^67.1.1",
     "pdf-lib": "^1.16.0"
   },
