--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "Generates a wanted poster from a picture and a few parameters",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "babel-node api/index.js",
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,13 +21,8 @@
   },
   "homepage": "https://github.com/lcassa/pdf-edit#readme",
   "dependencies": {
-    "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "googleapis": "^67.1.1",
     "pdf-lib": "^1.16.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
   }
 }
